language/move-lang/tests/move_check/typing/block_empty_invalid.move
module M {
    fun t0() {
        ({}: u64);
        ({}: &u64);
        ({}: (u64, bool));
    }
}
